force-app/main/default/objects/Quote_Document_Table_Def__mdt/Quote_Document_Table_Def__mdt.object-meta.xml
<CustomObject>
    <description>One generated table, described as configuration. Adding a table is a new record here rather than new Apex - the generator only ever sees a QuoteDocumentTableDefinition, so it does not care where the definition came from.</description>
    <label>Quote Document Table Definition</label>
    <pluralLabel>Quote Document Table Definitions</pluralLabel>
</CustomObject>