force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Allocation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Basis__c</fullName>
    <inlineHelpText>How an expanded line divides its measures among its buckets. NONE (default) does not divide - only valid when there is no expansion, or when Suppress Amounts is set. EVEN divides equally across the buckets a line occupies. Quantities are handled separately: they repeat rather than divide on any axis where the same units are present each period.</inlineHelpText>
    <label>Allocation Basis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>