force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Allocation_Scale__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Scale__c</fullName>
    <inlineHelpText>Decimal places money is allocated to. Defaults to 2. Quantities always allocate at 0 - you cannot deliver 33.33 devices. Shares always sum back to the source value exactly, whatever the scale.</inlineHelpText>
    <label>Allocation Scale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>