force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Amount_Basis__c.field-meta.xml
<CustomField>
    <fullName>Amount_Basis__c</fullName>
    <inlineHelpText>The financial meaning of the amounts, such as Final Value or Net Change. Must match a value on the Quote Document Table picklist.</inlineHelpText>
    <label>Amount Basis</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>