force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Assumptions_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_Block_Code__c</fullName>
    <inlineHelpText>The narrative block this table cannot be published without - the assumptions behind an estimate, a scenario or a projection. Generation fails if no active Quote_Document_Content__mdt supplies that block for the resolved locale. Set it on any table whose numbers are an estimate rather than a price: an estimate printed without its assumptions is a number a reader acts on with the caveat missing.</inlineHelpText>
    <label>Assumptions Block Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>