force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Cache_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cache_Policy__c</fullName>
    <inlineHelpText>REQUIRED on any table with a row customizer or customizer Flow. Declares what that contributor reads, because reuse is decided from a fingerprint that only sees the quote and its lines. STANDARD: reads only the quote and its lines. DECLARED_DEPENDENCIES: also reads the paths in Contributor Dependency Set, which are hashed. ALWAYS_REBUILD: reads data it cannot enumerate, so reuse is skipped for the WHOLE QUOTE. Blank fails with CONTRIBUTOR_DEPENDENCY_UNDECLARED - there is deliberately no default.</inlineHelpText>
    <label>Cache Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>DECLARED_DEPENDENCIES</fullName>
            </value>
            <value>
                <fullName>ALWAYS_REBUILD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>