force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Comparison_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Source_Code__c</fullName>
    <inlineHelpText>Registry code for QuoteDocumentComparisonRegistry, e.g. SOURCE_QUOTE. Set this to build a before-and-after table. Blank means no comparison, which is every ordinary table. A comparison table must use the CHANGE measure set and may not also expand its lines.</inlineHelpText>
    <label>Comparison Source Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>