force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Comparison_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Source_Field__c</fullName>
    <inlineHelpText>For SOURCE_QUOTE: the lookup on SBQQ__Quote__c naming the quote to compare against. Defaults to SBQQ__Source__c, which CPQ populates on a revision. A blank value on the quote itself fails generation rather than reporting every line as newly added.</inlineHelpText>
    <label>Comparison Source Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>