force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Comparison_Source_Version__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Source_Version__c</fullName>
    <inlineHelpText>Content identity for the comparison source, exactly like Row Customizer Version. Bump it when the matching or baseline logic changes, or quotes will reuse a comparison the new logic would never have produced.</inlineHelpText>
    <label>Comparison Source Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>