force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Composite_Separator__c.field-meta.xml
<CustomField>
    <fullName>Composite_Separator__c</fullName>
    <inlineHelpText>What joins the parts of a composite group label. Only used where two groupings share a Level. LEAVE BLANK for the default " / " giving "Hardware / Recurring" - Salesforce trims leading and trailing spaces from a text value, so a separator entered here cannot have spaces around it and will read "Hardware/Recurring".</inlineHelpText>
    <label>Composite Separator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>