force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Cross_Partition_Total__c.field-meta.xml
<CustomField>
    <fullName>Cross_Partition_Total__c</fullName>
    <inlineHelpText>Whether a total across the partitions means anything. NONE (the default, and required for anything mutually exclusive - alternatives, scenarios) says no such total exists and the renderer must not invent one. SUM says the partitions are complementary parts of one whole, as departments or purchasing entities are, and their totals add to the quote. Required whenever Partition Dimension is set: an author who has to choose cannot accidentally ship the misleading total.</inlineHelpText>
    <label>Cross Partition Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>