force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Order of this table within the document. Use increments of ten so a table can be inserted later without renumbering.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>