force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Display_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Display_Subtitle__c</fullName>
    <inlineHelpText>Optional second line printed under the heading. Leave blank if the table needs no subtitle.</inlineHelpText>
    <label>Display Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>