force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <inlineHelpText>REQUIRED on every active definition. The printable heading a document shows for this table. Table Name stays the admin-facing name used in list views and this metadata record; the two are deliberately separate, because the name that helps an admin find a record is rarely the heading a customer should read. Blank on an active definition fails config load - there is no fallback to Table Name.</inlineHelpText>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>