force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Expander_Code__c.field-meta.xml
<CustomField>
    <fullName>Expander_Code__c</fullName>
    <inlineHelpText>Registry code for QuoteDocumentExpanderRegistry, e.g. PERIOD. Set this when one quote line must become several document rows - one per month, per year, per milestone. Blank means no expansion, which is how every ordinary table works. An expanded table must also set an Allocation Basis, or its money would be counted once per bucket.</inlineHelpText>
    <label>Expander Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>