force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Expander_Version__c.field-meta.xml
<CustomField>
    <fullName>Expander_Version__c</fullName>
    <inlineHelpText>Content identity for the expander, exactly like Row Customizer Version. Bump it whenever the expander Apex changes behaviour: without it the fingerprint is unchanged, and quotes silently reuse a snapshot the new logic would never have produced.</inlineHelpText>
    <label>Expander Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>