force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <inlineHelpText>Optional narrative printed BELOW this table. Same table-attached scope as Intro Text.</inlineHelpText>
    <label>Footer Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>