force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Intro_Text__c.field-meta.xml
<CustomField>
    <fullName>Intro_Text__c</fullName>
    <inlineHelpText>Optional narrative printed ABOVE this table. Use it for anything a reader needs before the numbers make sense - for example the OPTIONAL_PRODUCTS disclaimer explaining these prices are not in the committed total. Standalone document content that is not attached to a table belongs to Quote_Document_Block__c instead.</inlineHelpText>
    <label>Intro Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>