force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Clear to stop generating this table without deleting the definition. Existing tables are removed on the next generation.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>