force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Line_Filter__c.field-meta.xml
<CustomField>
    <fullName>Line_Filter__c</fullName>
    <inlineHelpText>Which quote lines this table starts from: ALL, EXCLUDE_OPTIONAL, OPTIONAL_ONLY, RECURRING_ONLY, ONE_TIME_ONLY or BUNDLE_PARENTS_ONLY. An unrecognised value fails generation loudly rather than quietly including everything.</inlineHelpText>
    <label>Line Filter</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>