force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Max_Groups__c.field-meta.xml
<CustomField>
    <fullName>Max_Groups__c</fullName>
    <inlineHelpText>Ceiling on how many groups this table may produce. Composite grouping multiplies - two dimensions of five and four values can reach twenty groups, each adding a header and a subtotal. Exceeding this fails generation rather than emitting an unreadable document. Defaults to 50 when blank.</inlineHelpText>
    <label>Max Groups</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>