force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Measure_Set__c.field-meta.xml
<CustomField>
    <fullName>Measure_Set__c</fullName>
    <inlineHelpText>PRICE_WATERFALL or CHANGE. Measures outside the declared set are left blank.</inlineHelpText>
    <label>Measure Set</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>