force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Partition_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Partition_Dimension__c</fullName>
    <inlineHelpText>Splits this definition into SEPARATE tables, one per distinct value - alternative proposals, consumption scenarios, purchasing entities. Different from grouping: grouping nests rows inside one table under one grand total, partitioning produces several tables each with its own total and nothing spanning them. Accepts the same dimension names as a grouping. Blank means one table, which is every ordinary definition.</inlineHelpText>
    <label>Partition Dimension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>