force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Period_Months__c</fullName>
    <inlineHelpText>Months per bucket for the PERIOD expander. 1 = monthly, 3 = quarterly, 12 = annual. A term that does not divide evenly gets a shorter final period rather than an empty extra one. Ignored unless Expander Code is PERIOD.</inlineHelpText>
    <label>Period Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>