force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Period_One_Time_Placement__c.field-meta.xml
<CustomField>
    <fullName>Period_One_Time_Placement__c</fullName>
    <inlineHelpText>Where a one-time charge (hardware, setup) lands on a period axis. FIRST_PERIOD (default) puts it in period 1; EFFECTIVE_DATE puts it in the period containing its own start date; SPREAD divides it across the whole term. SPREAD must be chosen deliberately - spreading a setup fee prints a recurring charge that does not exist.</inlineHelpText>
    <label>Period One-Time Placement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>