force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Row_Customizer_Code__c.field-meta.xml
<CustomField>
    <fullName>Row_Customizer_Code__c</fullName>
    <inlineHelpText>Leave blank unless this table needs an approved Apex row adjustment. If set, enter a code registered in QuoteDocumentRowCustomizerRegistry, such as DISCOUNT_EXAMPLE, INDUSTRY_ALLEGIANCE, ROUNDING_EXAMPLE, or ESTIMATED_TAX. An unknown code stops generation and records a readable error.</inlineHelpText>
    <label>Row Customizer Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>