force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Row_Customizer_Flow__c.field-meta.xml
<CustomField>
    <fullName>Row_Customizer_Flow__c</fullName>
    <inlineHelpText>LEAVE BLANK unless this table's rows come from an autolaunched Flow. API name of that Flow. It takes a Quote_Document_Row__c collection named rows plus Text inputs quoteId, tableCode, locale, currencyIsoCode, and must return a collection named rows. IMPORTANT: a Flow loop variable is a COPY - collect edited rows into a second collection and assign that back to rows, or your edits are silently discarded. Runs AFTER the Apex customizer and can overwrite it.</inlineHelpText>
    <label>Row Customizer Flow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>