force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Row_Customizer_Flow_Version__c.field-meta.xml
<CustomField>
    <fullName>Row_Customizer_Flow_Version__c</fullName>
    <inlineHelpText>CONTENT IDENTITY, NOT DOCUMENTATION. Required when Row Customizer Flow is set. Any value - only whether it CHANGED matters. Hashed into the quote fingerprint, so bumping it is what makes quotes regenerate after you edit the Flow. Editing a Flow leaves its API name unchanged and is invisible to the fingerprint, so if you do not bump this, quotes stay Ready and reuse a snapshot your edited Flow would never have produced. Bump it whenever you activate a new Flow version.</inlineHelpText>
    <label>Row Customizer Flow Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>