force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Row_Customizer_Version__c.field-meta.xml
<CustomField>
    <fullName>Row_Customizer_Version__c</fullName>
    <inlineHelpText>CONTENT IDENTITY, NOT DOCUMENTATION. Required when Row Customizer Code is set. Any value (1, 2, 2026-08-27) - only whether it CHANGED matters. It is hashed into the quote fingerprint, so bumping it is what makes quotes regenerate after you deploy changed customizer Apex. Nothing can see an Apex body change, so if you deploy new logic and leave this alone the fingerprint is identical, quotes stay Ready, and generation reuses a snapshot your new code would never have produced. Bump it with the code.</inlineHelpText>
    <label>Row Customizer Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>