force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Schedule_Code__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Code__c</fullName>
    <inlineHelpText>For the SCHEDULE expander: which Quote_Document_Schedule__mdt rows define this table sections and their relative weights. Ignored unless Expander Code is SCHEDULE.</inlineHelpText>
    <label>Schedule Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>