force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Schedule_Divides_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Divides_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether quantities divide across the sections of this schedule. Tick it for a department or delivery split, where each section gets its own share of genuinely different units. Leave it clear for a payment schedule, where the same products are covered by every instalment - dividing there would print a third of a licence per payment.</inlineHelpText>
    <label>Schedule Divides Quantity</label>
    <type>Checkbox</type>
</CustomField>