force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Show_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the table prints a row per quote line, or only group subtotals and the grand total.</inlineHelpText>
    <label>Show Details</label>
    <type>Checkbox</type>
</CustomField>