force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Show_Section_Totals__c.field-meta.xml
<CustomField>
    <fullName>Show_Section_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to add Recurring and One-Time section totals above the grand total. These cut the same lines a second way and sit alongside the group subtotals, not beneath them.</inlineHelpText>
    <label>Show Section Totals</label>
    <type>Checkbox</type>
</CustomField>