force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Sort_Groups_By__c.field-meta.xml
<CustomField>
    <fullName>Sort_Groups_By__c</fullName>
    <inlineHelpText>How top-level groups (bundles, product families, etc.) are ordered in the printed table. ALPHABETICAL (default, blank also means this) sorts by the group's label. LINE_SEQUENCE sorts by the lowest SBQQ__Number__c among the lines in that group, so whichever bundle was added to the quote first prints first.</inlineHelpText>
    <label>Sort Groups By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>