force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Suppress_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Amounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set on an expanded table that carries no money at all - a coverage calendar, a delivery list. It is the only way an expansion may run without an Allocation Basis, and it is deliberately explicit: an expansion that neither allocates nor suppresses would print each line's full amount in every bucket it occupies.</inlineHelpText>
    <label>Suppress Amounts</label>
    <type>Checkbox</type>
</CustomField>