force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Table_Code__c.field-meta.xml
<CustomField>
    <fullName>Table_Code__c</fullName>
    <inlineHelpText>Stable identifier a document template references, such as PRODUCT_FAMILY_SUMMARY. Never rename one that a template already uses.</inlineHelpText>
    <label>Table Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>