force-app/main/default/objects/Quote_Document_Table_Def__mdt/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <inlineHelpText>Human-readable name. The generator prefixes it with the quote number.</inlineHelpText>
    <label>Table Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>